--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-My GitHub Page
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <!-- Add your site or application content here -->
+	<div class="container" style="text-align:center">
+          <h2>Site en construction</h2>
+	  <img src="img/part2.jpg" />
+	  <img src="img/part3.jpg" />
+	  <img src="img/part4.jpg" />
+	  <img src="img/part1.jpg" />
+	</div>
+    </body>
+</html>
