--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
     <body>
         <!-- Add your site or application content here -->
 	<div class="container" style="text-align:center">
-          <h2>Site en construction</h2>
-	  <img src="img/part2.jpg" />
-	  <img src="img/part3.jpg" />
-	  <img src="img/part4.jpg" />
-	  <img src="img/part1.jpg" />
+	  <img src="img/framebox.jpg" />
 	</div>
     </body>
 </html>
