--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!-- Add your site or application content here -->
 	<div class="container" style="text-align:center">
 	  <img src="img/framebox.jpg" />
+	  <div><a href="http://framebox.fr/files/plaquette_framebox.pdf" class="classname">Télécharger la plaquette</a></div>
 	</div>
     </body>
 </html>
