--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 			<div id="myCarousel" class="row-fluid carousel slide">
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
-						<iframe width="960" height="540" src="//www.youtube.com/embed/Kt6o8Dw-IZs?rel=0" frameborder="0" allowfullscreen></iframe>
+						<object width="960" height="540">
+							<param name="movie" value="http//www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" />
+							<embed width="960" height="540" src="http//www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash"></embed>
+						</object>
 					</div>
 <!-- 					<div class="item active row-fluid">
 						<img src="assets/img/carousel/1.jpg" class="span12" />
