Iframe url corrected

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
 						<object width="960" height="540">
-							<param name="movie" value="http//www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" />
-							<embed width="960" height="540" src="http//www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash"></embed>
+							<param name="movie" value="http://www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" />
+							<embed width="960" height="540" src="http://www.youtube.com/embed/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash"></embed>
 						</object>
 					</div>
 <!-- 					<div class="item active row-fluid">
