--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 			<header>
 				<ul class="nav nav-pills pull-right">
 					<li><a href="index.html">Accueil</a></li>
-					<li><a href="a_propos.html">A propos</a></li>
+					<li><a href="a_propos.html">La genèse</a></li>
 					<!-- <li><a href="#">Ils nous ont fait confiance</a></li> -->
 					<li><a href="#" class="galerie">Galerie</a></li>
 					<li class="active"><a href="contact.html">Contact</a></li>
