--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header>
 				<ul class="nav nav-pills pull-right">
 					<li class="active"><a href="index.html">Accueil</a></li>
-					<li><a href="a_propos.html">A propos</a></li>
+					<li><a href="a_propos.html">La genèse</a></li>
 					<!-- <li><a href="#">Ils nous ont fait confiance</a></li> -->
 					<li><a href="#" class="galerie">Galerie</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -23,7 +23,7 @@
 				<h3><a href="index.html"><img style="height: 50px;" src="assets/img/logo-framebox.png" alt="logo" /></a></h3>
 			</header>
 
-			<div id="myCarousel" class="row-fluid carousel slide">
+			<div id="myCarousel-video" class="row-fluid carousel slide">
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
 						<object width="960" height="540">
@@ -78,7 +78,7 @@
 					<li class="active"><a href="#installation">L'installation</a></li>
 					<li><a href="#prestation">La prestation</a></li>
 					<li><a href="#personnalisation">La personnalisation</a></li>
-					<li><a href="#impressions">Les impressions photographiques</a></li>
+					<li><a href="#impressions">Les impressions et partage</a></li>
 					<li><a href="#options">Les options</a></li>
 				</ul>
 
@@ -169,6 +169,50 @@
 							</ul>
 							<img class="span4" src="assets/img/marketing/logo.jpg">
 						</p>
+					</div>
+				</div>
+			</div>
+
+			<div id="myCarousel" class="row-fluid carousel slide">
+				<div class="carousel-inner span12">
+					<div class="item active row-fluid">
+						<img src="assets/img/carousel/1.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/2.jpg"  class="span12"/>
+					</div>
+					<div class="item  row-fluid">
+						<img src="assets/img/carousel/3.jpg"  class="span12"/>
+					</div>
+					<div class="item  row-fluid">
+						<img src="assets/img/carousel/4.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/5.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/6.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/7.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/8.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/9.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/10.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/11.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/12.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/13.jpg"  class="span12"/>
 					</div>
 				</div>
 			</div>
