"ils nous ont fait confiance"

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<ul class="nav nav-pills pull-right">
 					<li class="active"><a href="index.html">Accueil</a></li>
 					<li><a href="a_propos.html">La genèse</a></li>
-					<!-- <li><a href="#">Ils nous ont fait confiance</a></li> -->
 					<li><a href="#" class="galerie">Galerie</a></li>
+					<li><a href="ils_nous_ont_fait_confiance.html">Ils nous ont fait confiance</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				<h3><a href="index.html"><img style="height: 50px;" src="assets/img/logo-framebox.png" alt="logo" /></a></h3>
