--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,12 @@
 			<div id="myCarousel" class="row-fluid carousel slide">
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
+						<img src="assets/img/carousel/0A.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/0B.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
 						<img src="assets/img/carousel/1.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
