--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						</p>
 					    </div>
 					    <span class="span6">
-					      <img src="assets/img/marketing/impressions.jpg">
+					      <img src="assets/img/marketing/borne.png">
 					    </span>
 					    </div>
 					</div>
@@ -176,6 +176,12 @@
 			<div id="myCarousel" class="row-fluid carousel slide">
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
+						<img src="assets/img/carousel/0A.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/0B.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
 						<img src="assets/img/carousel/1.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
