--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 					<li><a href="#personnalisation">La personnalisation</a></li>
 					<li><a href="#impressions">Les impressions et partage</a></li>
 					<li><a href="#options">Les options</a></li>
+					<li><a href="assets/plaquette.pdf" style="background-color:#e74f1e;color:#fff;">Télécharger la plaquette</a></li>
 				</ul>
 
 				<div class="tab-content" style="overflow:visible;">
