--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						</div>
 					<div class="tab-pane" id="personnalisation">
 					  <div class="row-fluid">
-					    <div class="span7">
+					    <div class="span4">
 						<p>
 							Un choix de 4 cadres différents vous est proposé de base, mais <strong>l'ensemble est personnalisable à vos couleurs ou selon le thème de l'événement :</strong> font d'arrière plan du cadre, habillage de la colonne de capture et de l'entourage du cadre ..
 						</p>
@@ -137,8 +137,9 @@
 							Une étude de votre projet sera effectué en concertation avec l'équipe FrameBox
 						</p>
 					    </div>
-					    <span class="span5">
-					      <img src="assets/img/marketing/personnalisation.jpg">
+					    <span class="span8">
+					      <img src="assets/img/marketing/personnalisation.jpg" width="50%" style="float:left;">
+					      <img src="assets/img/marketing/personnalisation2.jpg" width="50%" style="float:left;">
 					    </span>
 					    </div>
 					</div>
@@ -150,13 +151,14 @@
 							Les impressions peuvent être personnalisées avec un titre, un logo, ou tout autre élément graphique en rapport avec l'événement.
 						</p>
 						<p>
-							Une borne multimédia, intégré à l'installation, permet à vos invités de ré-imprimer les images de leur choix, ou encore de se les envoyer par mail "en live".
+							Une borne multimédia déportée permet à vos invités de ré-imprimer les images de leur choix, ou encore de se les envoyer par mail "en live".
 						</p>
 						<p>
-							A l'issue de la prestation, un DVD vous est remis avec l'ensemble des shoots, ainsi qu'une vidéo de type "Stop Motion", réalisée avec l'ensemble des images.
+							A l'issue de la prestation, une vidéo de type "Stop Motion" est réalisée avec l'ensemble des images, et une galerie Web permet aux participants de télécharger leurs images et de visualiser la vidéo.
 						</p>
 					    </div>
 					    <span class="span6">
+					    	<img src="assets/img/marketing/VisuPhotos.jpg">
 					      <img src="assets/img/marketing/borne.png">
 					    </span>
 					    </div>
@@ -166,7 +168,6 @@
 							<ul class="span7">
 								<li>Possibilités d'écran LCD 24 pouces, déporté pour l'affichage des images en wifi.</li>
 								<li>Vidéo projection live sur grand écran.</li>
-								<li>Réalisation et hébergement d'un mini site Web personnalisé selon l'événement, pour la mise en ligne des images et de la vidéo.</li>
 							</ul>
 							<img class="span4" src="assets/img/marketing/logo.jpg">
 						</p>
