--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
 
 			<footer>
 				<p>
-					<img src="assets/img/vincent-leblic.png" alt="vincent leblic" />
+					<a href="http://studiodesplantes.fr/"><img src="assets/img/vincent-leblic.png" alt="vincent leblic" /></a>
 					<a href=""><img class="pull-right" src="assets/img/logo-studiodesplantes.png" alt="studio des plantes" /></a>
 				</p>
 			</footer>
