--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 			<footer>
 				<p>
-					<img src="assets/img/vincent-leblic.png" alt="vincent leblic" />
+					<a href="http://studiodesplantes.fr/"><img src="assets/img/vincent-leblic.png" alt="vincent leblic" /></a>
 					<a href="http://studiodesplantes.fr/"><img class="pull-right" src="assets/img/logo-studiodesplantes.png" alt="studio des plantes" /></a>
 				</p>
 			</footer>
