front page splitted

--- a/index.html
+++ b/index.html
@@ -23,15 +23,26 @@
 				<h3><a href="index.html"><img style="height: 50px;" src="assets/img/logo-framebox.png" alt="logo" /></a></h3>
 			</header>
 
-			<div id="myCarousel-video" class="row-fluid carousel slide">
-				<div class="carousel-inner span12">
+			<div class="container up">
+			<div id="myCarousel-video" class="carousel slide" style="width:480px;float:left;">
+				<div class="carousel-inner">
 					<div class="item active row-fluid">
-						<object width="960" height="540">
+						<object width="480" height="540">
 							<param name="movie" value="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" />
-							<embed height="540" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="960" ></embed>
+							<embed height="270" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="960" ></embed>
 						</object>
 					</div>
-<!-- 					<div class="item active row-fluid">
+				</div>
+			</div>
+			<div id="myCarousel" class="carousel slide" style="width:480px;float:left;">
+				<div class="carousel-inner">
+					<div class="item active row-fluid">
+						<img src="assets/img/carousel/0A.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/0B.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
 						<img src="assets/img/carousel/1.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
@@ -69,10 +80,10 @@
 					</div>
 					<div class="item row-fluid">
 						<img src="assets/img/carousel/13.jpg"  class="span12"/>
-					</div> -->
+					</div>
 				</div>
 			</div>
-
+		</div>
 			<div class="row-fluid marketing">
 				<ul class="nav nav-tabs" id="myTab">
 					<li class="active"><a href="#installation">L'installation</a></li>
@@ -174,57 +185,6 @@
 					</div>
 				</div>
 			</div>
-
-			<div id="myCarousel" class="row-fluid carousel slide">
-				<div class="carousel-inner span12">
-					<div class="item active row-fluid">
-						<img src="assets/img/carousel/0A.jpg" class="span12" />
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/0B.jpg" class="span12" />
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/1.jpg" class="span12" />
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/2.jpg"  class="span12"/>
-					</div>
-					<div class="item  row-fluid">
-						<img src="assets/img/carousel/3.jpg"  class="span12"/>
-					</div>
-					<div class="item  row-fluid">
-						<img src="assets/img/carousel/4.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/5.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/6.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/7.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/8.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/9.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/10.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/11.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/12.jpg"  class="span12"/>
-					</div>
-					<div class="item row-fluid">
-						<img src="assets/img/carousel/13.jpg"  class="span12"/>
-					</div>
-				</div>
-			</div>
-
 			<hr />
 
 			<footer>
