--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 			<div id="myCarousel-video" class="carousel slide" style="width:480px;float:left;">
 				<div class="carousel-inner">
 					<div class="item active row-fluid">
-						<object width="480" height="540">
+						<object width="480" height="318">
 							<param name="movie" value="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" />
-							<embed height="270" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="960" ></embed>
+							<embed height="318" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="480" ></embed>
 						</object>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 					<li><a href="#personnalisation">La personnalisation</a></li>
 					<li><a href="#impressions">Les impressions et partage</a></li>
 					<li><a href="#options">Les options</a></li>
-					<li><a href="assets/plaquette.pdf" style="background-color:#e74f1e;color:#fff;">Télécharger la plaquette</a></li>
+					<li><a class="no-js" href="./assets/plaquette-framebox.pdf" download style="background-color:#e74f1e;color:#fff;">Télécharger la plaquette</a></li>
 				</ul>
 
 				<div class="tab-content" style="overflow:visible;">
