--- a/a_propos.html
+++ b/a_propos.html
@@ -18,7 +18,7 @@
 					<li class="active"><a href="a_propos.html">La genèse</a></li>
 					<li><a href="#" class="galerie">Galerie</a></li>
 					<li><a href="ils_nous_ont_fait_confiance.html">Ils nous ont fait confiance</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="mailto:contact@framebox.fr">Contact</a></li>
 				</ul>
 				<h3><a href="index.html"><img style="height: 50px;" src="assets/img/logo-framebox.png" alt="logo" /></a></h3>
 			</header>
