--- a/index.html
+++ b/index.html
@@ -37,49 +37,49 @@
 			<div id="myCarousel" class="carousel slide" style="width:480px;float:left;">
 				<div class="carousel-inner">
 					<div class="item active row-fluid">
-						<img src="assets/img/carousel/0A.jpg" class="span12" />
+						<img src="assets/img/mini-carousel/0A.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/0B.jpg" class="span12" />
+						<img src="assets/img/mini-carousel/0B.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/1.jpg" class="span12" />
+						<img src="assets/img/mini-carousel/1.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/2.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/2.jpg"  class="span12"/>
 					</div>
 					<div class="item  row-fluid">
-						<img src="assets/img/carousel/3.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/3.jpg"  class="span12"/>
 					</div>
 					<div class="item  row-fluid">
-						<img src="assets/img/carousel/4.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/4.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/5.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/5.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/6.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/6.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/7.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/7.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/8.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/8.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/9.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/9.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/10.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/10.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/11.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/11.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/12.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/12.jpg"  class="span12"/>
 					</div>
 					<div class="item row-fluid">
-						<img src="assets/img/carousel/13.jpg"  class="span12"/>
+						<img src="assets/img/mini-carousel/13.jpg"  class="span12"/>
 					</div>
 				</div>
 			</div>
