--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 			</header>
 
 			<div class="container up">
-			<div id="myCarousel-video" class="carousel slide" style="width:480px;float:left;">
-				<div class="carousel-inner">
+			<div id="myCarousel-video" class="carousel slide" style="width:475px;float:left;">
+			<div class="carousel-inner">
 					<div class="item active row-fluid">
-						<object width="480" height="318">
+						<object width="475" height="313">
 							<param name="movie" value="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" />
-							<embed height="318" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="480" ></embed>
+							<embed height="313" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="475" ></embed>
 						</object>
 					</div>
 				</div>
 			</div>
-			<div id="myCarousel" class="carousel slide" style="width:480px;float:left;">
+			<div id="myCarousel" class="carousel slide" style="width:475px;height:313px;overflow:hidden;float:left;margin-left:10px;">
 				<div class="carousel-inner">
 					<div class="item active row-fluid">
 						<img src="assets/img/mini-carousel/0A.jpg" class="span12" />
