--- a/index.html
+++ b/index.html
@@ -187,6 +187,56 @@
 			</div>
 			<hr />
 
+			<div id="myCarousel" class="row-fluid carousel slide">
+				<div class="carousel-inner span12">
+					<div class="item active row-fluid">
+						<img src="assets/img/carousel/0A.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/0B.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/1.jpg" class="span12" />
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/2.jpg"  class="span12"/>
+					</div>
+					<div class="item  row-fluid">
+						<img src="assets/img/carousel/3.jpg"  class="span12"/>
+					</div>
+					<div class="item  row-fluid">
+						<img src="assets/img/carousel/4.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/5.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/6.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/7.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/8.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/9.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/10.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/11.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/12.jpg"  class="span12"/>
+					</div>
+					<div class="item row-fluid">
+						<img src="assets/img/carousel/13.jpg"  class="span12"/>
+					</div>
+				</div>
+			</div>
+
 			<footer>
 				<p>
 					<a href="http://studiodesplantes.fr/"><img src="assets/img/vincent-leblic.png" alt="vincent leblic" /></a>
