--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			</div>
 			<hr />
 
-			<div id="myCarousel" class="row-fluid carousel slide">
+			<div id="myCarousel1" class="row-fluid carousel slide">
 				<div class="carousel-inner span12">
 					<div class="item active row-fluid">
 						<img src="assets/img/carousel/0A.jpg" class="span12" />
