--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 			<div id="myCarousel" class="carousel slide" style="width:475px;height:313px;overflow:hidden;float:left;margin-left:10px;">
 				<div class="carousel-inner">
 					<div class="item active row-fluid">
+						<img src="assets/img/carousel/slideshow.gif" class="span12" />
+					</div>
+					<!--
+					<div class="item active row-fluid">
 						<img src="assets/img/mini-carousel/0A.jpg" class="span12" />
 					</div>
 					<div class="item row-fluid">
@@ -81,6 +85,7 @@
 					<div class="item row-fluid">
 						<img src="assets/img/mini-carousel/13.jpg"  class="span12"/>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
