Changement vidéo générique

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<div class="carousel-inner">
 					<div class="item active row-fluid">
 						<object width="475" height="313">
-							<param name="movie" value="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" />
-							<embed height="313" src="http://www.youtube.com/v/Kt6o8Dw-IZs?autoplay=1" type="application/x-shockwave-flash" width="475" ></embed>
+							<param name="movie" value="http://www.youtube.com/v/9lDBieM4LU0?autoplay=1" />
+							<embed height="313" src="http://www.youtube.com/v/9lDBieM4LU0?autoplay=1" type="application/x-shockwave-flash" width="475" ></embed>
 						</object>
 					</div>
 				</div>
