plaquette new window

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<li><a href="#personnalisation">La personnalisation</a></li>
 					<li><a href="#impressions">Les impressions et partage</a></li>
 					<li><a href="#options">Les options</a></li>
-					<li><a class="no-js" href="./assets/plaquette-framebox.pdf" download style="background-color:#e74f1e;color:#fff;">Télécharger la plaquette</a></li>
+					<li><a class="no-js" target="_blank" href="./assets/plaquette-framebox.pdf"  style="background-color:#e74f1e;color:#fff;">Télécharger la plaquette</a></li>
 				</ul>
 
 				<div class="tab-content" style="overflow:visible;">
