--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="myCarousel-video" class="carousel slide" style="width:475px;float:left;">
 			<div class="carousel-inner">
 					<div class="item active row-fluid">
-						<iframe width="475" height="313" src="//www.youtube.com/embed/9lDBieM4LU0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen autoplay></iframe>
+						<iframe width="475" height="313" src="//www.youtube.com/embed/9lDBieM4LU0?rel=0&amp;showinfo=0?autoplay=1" frameborder="0" allowfullscreen autoplay="true"></iframe>
 <!--						<object width="475" height="313">
 							<param name="movie" value="http://www.youtube.com/v/9lDBieM4LU0?autoplay=1?VQ=HD720" allowFullScreen="true" />
 							<embed height="313" src="http://www.youtube.com/v/9lDBieM4LU0?autoplay=1?VQ=HD720" allowFullScreen="true" type="application/x-shockwave-flash" width="475" ></embed>
